--- a/HiringManager.EntityModel/HiringManager.EntityModel.csproj
+++ b/HiringManager.EntityModel/HiringManager.EntityModel.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Opening.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source.cs" />
     <Compile Include="Specifications\PositionSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
