--- a/HiringManager.Domain.EntityFramework.UnitTests/packages.config
+++ b/HiringManager.Domain.EntityFramework.UnitTests/packages.config
@@ -4,5 +4,6 @@
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net40" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
