--- a/HiringManager.Web.Integration.Tests/HiringManager.Web.Integration.IntegrationTests.csproj
+++ b/HiringManager.Web.Integration.Tests/HiringManager.Web.Integration.IntegrationTests.csproj
@@ -58,8 +58,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject">
-      <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
@@ -126,9 +127,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CreatePosition.feature</DependentUpon>
     </Compile>
-    <Compile Include="IntegrationTestConfiguration.cs" />
-    <Compile Include="IntegrationTestDbConfiguration.cs" />
-    <Compile Include="NBuilderConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioContextExtensions.cs" />
     <Compile Include="Models\Positions\CandidateStatusDetailsTestModel.cs" />
@@ -179,9 +177,13 @@
       <Project>{791DA4A2-74BD-447B-B2A1-17B1750E2785}</Project>
       <Name>HiringManager</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TestHelpers\TestHelpers.csproj">
+    <ProjectReference Include="..\IntegrationTestHelpers\IntegrationTestHelpers.csproj">
+      <Project>{7F94D980-6252-4B6D-8462-C7316019EB76}</Project>
+      <Name>IntegrationTestHelpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestHelpers\UnitTestHelpers.csproj">
       <Project>{8EF3434D-873D-4139-9513-758CF15D1097}</Project>
-      <Name>TestHelpers</Name>
+      <Name>UnitTestHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
