--- a/HiringManager.Web.Ninject/packages.config
+++ b/HiringManager.Web.Ninject/packages.config
@@ -4,8 +4,8 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net451" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net40" requireReinstallation="True" />
-  <package id="ninject.extensions.conventions" version="3.0.0.11" targetFramework="net40" requireReinstallation="True" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
   <package id="Simple.Validation.Ninject" version="0.7.1" targetFramework="net40" />
 </packages>
