--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -41,16 +41,17 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net40" requireReinstallation="True" />
-  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net40" requireReinstallation="True" />
-  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" requireReinstallation="True" />
-  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" requireReinstallation="True" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.MVC3" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
   <package id="Simple.Validation.Ninject" version="0.7.1" targetFramework="net40" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="T4MVC" version="3.7.4" targetFramework="net451" />
   <package id="T4MVCExtensions" version="3.7.4" targetFramework="net451" />
-  <package id="WebActivator" version="1.5.3" targetFramework="net40" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
