--- a/HiringManager.Web/HiringManager.Web.csproj
+++ b/HiringManager.Web/HiringManager.Web.csproj
@@ -418,6 +418,7 @@
     <Content Include="Views\Source\Details.cshtml" />
     <Content Include="Views\Source\Edit.cshtml" />
     <Content Include="Views\Source\Index.cshtml" />
+    <Content Include="Views\Candidate\_EditForm.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
