--- a/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
+++ b/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
@@ -70,11 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Candidates\EditCandidateViewModel.cs" />
+    <Compile Include="ContactInfoViewModel.cs" />
     <Compile Include="IndexViewModel.cs" />
     <Compile Include="Positions\AddCandidateViewModel.cs" />
     <Compile Include="Positions\CandidateStatusViewModel.cs" />
     <Compile Include="Positions\ClosePositionViewModel.cs" />
-    <Compile Include="Positions\ContactInfoViewModel.cs" />
     <Compile Include="Positions\CreatePositionViewModel.cs" />
     <Compile Include="Positions\PositionCandidatesViewModel.cs" />
     <Compile Include="Positions\PositionCandidateViewModel.cs" />
