--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -95,39 +95,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddCandidateRequest.cs" />
-    <Compile Include="AddCandidateResponse.cs" />
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Authentication\CustomClaimsIdentityFactory.cs" />
     <Compile Include="Authentication\Claims.cs" />
+    <Compile Include="Authentication\IUserManager.cs" />
+    <Compile Include="Authentication\IUserSession.cs" />
     <Compile Include="AutoMapperProfiles\DomainProfile.cs" />
-    <Compile Include="CandidateStatusDetails.cs" />
+    <Compile Include="Candidates\ICandidateService.cs" />
+    <Compile Include="Candidates\SaveCandidateRequest.cs" />
     <Compile Include="ContactInfoDetails.cs" />
-    <Compile Include="CreatePositionRequest.cs" />
-    <Compile Include="CreatePositionResponse.cs" />
-    <Compile Include="HireCandidateRequest.cs" />
-    <Compile Include="CandidateStatusResponse.cs" />
-    <Compile Include="ICandidateService.cs" />
+    <Compile Include="Impl\CandidateService.cs" />
     <Compile Include="Impl\DomainServiceBase.cs" />
     <Compile Include="Impl\IUnitOfWork.cs" />
     <Compile Include="Impl\PositionService.cs" />
     <Compile Include="Impl\SourceService.cs" />
     <Compile Include="Impl\UserSession.cs" />
-    <Compile Include="IPositionService.cs" />
-    <Compile Include="ISourceService.cs" />
-    <Compile Include="IUserManager.cs" />
-    <Compile Include="IUserSession.cs" />
     <Compile Include="IValidatedResponse.cs" />
-    <Compile Include="QuerySourcesRequest.cs" />
-    <Compile Include="SaveCandidateRequest.cs" />
-    <Compile Include="SetCandidateStatusRequest.cs" />
-    <Compile Include="PositionDetails.cs" />
-    <Compile Include="PositionSummary.cs" />
+    <Compile Include="Positions\AddCandidateRequest.cs" />
+    <Compile Include="Positions\AddCandidateResponse.cs" />
+    <Compile Include="Positions\CandidateStatusDetails.cs" />
+    <Compile Include="Positions\CandidateStatusResponse.cs" />
+    <Compile Include="Positions\CreatePositionRequest.cs" />
+    <Compile Include="Positions\CreatePositionResponse.cs" />
+    <Compile Include="Positions\HireCandidateRequest.cs" />
+    <Compile Include="Positions\IPositionService.cs" />
+    <Compile Include="Positions\PositionDetails.cs" />
+    <Compile Include="Positions\PositionSummary.cs" />
+    <Compile Include="Positions\QueryPositionSummariesRequest.cs" />
+    <Compile Include="Positions\SetCandidateStatusRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryPositionSummariesRequest.cs" />
-    <Compile Include="RegisterManagerRequest.cs" />
     <Compile Include="Impl\UserManager.cs" />
-    <Compile Include="SourceSummary.cs" />
+    <Compile Include="Sources\ISourceService.cs" />
+    <Compile Include="Sources\QuerySourcesRequest.cs" />
+    <Compile Include="Sources\SourceSummary.cs" />
     <Compile Include="ValidatedResponse.cs" />
   </ItemGroup>
   <ItemGroup>
