#20, added support for add existing candidate to position.

--- a/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
+++ b/HiringManager.DomainServices.Transactions.UnitTests/HiringManager.DomainServices.Transactions.UnitTests.csproj
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=3.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AutoMapper.3.2.0\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="FizzWare.NBuilder">
       <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
     </Reference>
@@ -61,7 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddCandidateTests.cs" />
+    <Compile Include="AddCandidateToPositionTests.cs" />
     <Compile Include="CloseTemplateTests.cs" />
     <Compile Include="CreatePositionTests.cs" />
     <Compile Include="HireCandidateTests.cs" />
