--- a/HiringManager.Web.UnitTests/HiringManager.Web.UnitTests.csproj
+++ b/HiringManager.Web.UnitTests/HiringManager.Web.UnitTests.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperProfile\Domain\CandidateMappingTests.cs" />
+    <Compile Include="AutoMapperProfile\Domain\CandidateStatusMappingTests.cs" />
     <Compile Include="AutoMapperProfile\Presentation\AddCandidateViewModelMapperTests.cs" />
     <Compile Include="AutoMapperProfile\AutoMapperConfigurationTests.cs" />
     <Compile Include="AutoMapperProfile\Presentation\CandidateStatusViewModelMapperTests.cs" />
